convert css color names to hex

--- a/source/tools/hostConfig/scss-to-json/package.json
+++ b/source/tools/hostConfig/scss-to-json/package.json
@@ -15,6 +15,7 @@
   "license": "MIT",
   "dependencies": {
     "@types/node-sass": "^3.10.32",
+    "css-color-names": "0.0.4",
     "css2json": "0.0.4",
     "node-sass": "^4.5.2"
   }
