Code review feedback

--- a/source/uwp/Renderer/XamlCardRenderer.vcxproj
+++ b/source/uwp/Renderer/XamlCardRenderer.vcxproj
@@ -165,6 +165,7 @@
     <ClInclude Include="lib\ErrorHandling.h" />
     <ClInclude Include="lib\IImageLoadTrackerListener.h" />
     <ClInclude Include="lib\ImageLoadTracker.h" />
+    <ClInclude Include="lib\InputItem.h" />
     <ClInclude Include="lib\IXamlBuilderListener.h" />
     <ClInclude Include="lib\pch.h" />
     <ClInclude Include="lib\Util.h" />
@@ -218,6 +219,7 @@
     <ClCompile Include="lib\AdaptiveTimeInputOptions.cpp" />
     <ClCompile Include="lib\AdaptiveToggleInputOptions.cpp" />
     <ClCompile Include="lib\ImageLoadTracker.cpp" />
+    <ClCompile Include="lib\InputItem.cpp" />
     <ClCompile Include="lib\Util.cpp" />
     <ClCompile Include="lib\XamlBuilder.cpp" />
     <ClCompile Include="lib\XamlCardRendererComponent.cpp" />
