--- a/source/uwp/Renderer/XamlCardRenderer.vcxproj
+++ b/source/uwp/Renderer/XamlCardRenderer.vcxproj
@@ -120,8 +120,8 @@
     <ClInclude Include="lib\AdaptiveCardOptions.h" />
     <ClInclude Include="lib\AdaptiveContainerStyleConfig.h" />
     <ClInclude Include="lib\AdaptiveHttpAction.h" />
-    <ClInclude Include="lib\AdaptiveInputChoice.h" />
-    <ClInclude Include="lib\AdaptiveInputChoiceSet.h" />
+    <ClInclude Include="lib\AdaptiveChoiceInput.h" />
+    <ClInclude Include="lib\AdaptiveChoiceSetInput.h" />
     <ClInclude Include="lib\AdaptiveChoiceSetInputOptions.h" />
     <ClInclude Include="lib\AdaptiveColorOption.h" />
     <ClInclude Include="lib\AdaptiveColorOptions.h" />
@@ -142,11 +142,11 @@
     <ClInclude Include="lib\AdaptiveImageSet.h" />
     <ClInclude Include="lib\AdaptiveImageSetOptions.h" />
     <ClInclude Include="lib\AdaptiveImageSizeOptions.h" />
-    <ClInclude Include="lib\AdaptiveInputDate.h" />
-    <ClInclude Include="lib\AdaptiveInputNumber.h" />
-    <ClInclude Include="lib\AdaptiveInputText.h" />
-    <ClInclude Include="lib\AdaptiveInputTime.h" />
-    <ClInclude Include="lib\AdaptiveInputToggle.h" />
+    <ClInclude Include="lib\AdaptiveDateInput.h" />
+    <ClInclude Include="lib\AdaptiveNumberInput.h" />
+    <ClInclude Include="lib\AdaptiveTextInput.h" />
+    <ClInclude Include="lib\AdaptiveTimeInput.h" />
+    <ClInclude Include="lib\AdaptiveToggleInput.h" />
     <ClInclude Include="lib\AdaptiveNumberInputOptions.h" />
     <ClInclude Include="lib\AdaptiveOpenUrlAction.h" />
     <ClInclude Include="lib\AdaptiveSeparationOptions.h" />
@@ -178,8 +178,8 @@
     <ClCompile Include="lib\AdaptiveCardOptions.cpp" />
     <ClCompile Include="lib\AdaptiveContainerStyleConfig.cpp" />
     <ClCompile Include="lib\AdaptiveHttpAction.cpp" />
-    <ClCompile Include="lib\AdaptiveInputChoice.cpp" />
-    <ClCompile Include="lib\AdaptiveInputChoiceSet.cpp" />
+    <ClCompile Include="lib\AdaptiveChoiceInput.cpp" />
+    <ClCompile Include="lib\AdaptiveChoiceSetInput.cpp" />
     <ClCompile Include="lib\AdaptiveChoiceSetInputOptions.cpp" />
     <ClCompile Include="lib\AdaptiveColorOption.cpp" />
     <ClCompile Include="lib\AdaptiveColorOptions.cpp" />
@@ -200,11 +200,11 @@
     <ClCompile Include="lib\AdaptiveImageSet.cpp" />
     <ClCompile Include="lib\AdaptiveImageSetOptions.cpp" />
     <ClCompile Include="lib\AdaptiveImageSizeOptions.cpp" />
-    <ClCompile Include="lib\AdaptiveInputDate.cpp" />
-    <ClCompile Include="lib\AdaptiveInputNumber.cpp" />
-    <ClCompile Include="lib\AdaptiveInputText.cpp" />
-    <ClCompile Include="lib\AdaptiveInputTime.cpp" />
-    <ClCompile Include="lib\AdaptiveInputToggle.cpp" />
+    <ClCompile Include="lib\AdaptiveDateInput.cpp" />
+    <ClCompile Include="lib\AdaptiveNumberInput.cpp" />
+    <ClCompile Include="lib\AdaptiveTextInput.cpp" />
+    <ClCompile Include="lib\AdaptiveTimeInput.cpp" />
+    <ClCompile Include="lib\AdaptiveToggleInput.cpp" />
     <ClCompile Include="lib\AdaptiveNumberInputOptions.cpp" />
     <ClCompile Include="lib\AdaptiveOpenUrlAction.cpp" />
     <ClCompile Include="lib\AdaptiveSeparationOptions.cpp" />
