--- a/.gitignore
+++ b/.gitignore
@@ -269,5 +269,8 @@ product.pbxproj
 #Generated header from MIDL
 **/UWP/Renderer/AdaptiveCards.XamlCardRenderer.h
 
-#macOS .DS_Store files
-.DS_Store
+#macOS 
+**/.DS_Store
+# Xcode
+*.pbxproj
+*.xcuserstate
