--- a/source/website/wwwroot/.npmrc
+++ b/source/website/wwwroot/.npmrc
@@ -1,2 +1,1 @@
-registry=https://fuselabs.pkgs.visualstudio.com/_packaging/FuseNPM/npm/registry/
-always-auth=true
+//registry=https://fuselabs.pkgs.visualstudio.com/_packaging/FuseNPM/npm/registry/
