Remove old docs, and redirect /documentation URL to new site (#453)
* redirect /documentation to new site

* added package.json for site

* remove docs and redirect to new site

--- a/source/website/Website.csproj
+++ b/source/website/Website.csproj
@@ -43,6 +43,9 @@
     <Folder Include="Properties\PublishProfiles\" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="web.config" />
+  </ItemGroup>
+  <ItemGroup>
     <WCFMetadata Include="Connected Services" />
   </ItemGroup>
 
