--- a/source/uwp/Renderer/XamlCardRenderer.vcxproj
+++ b/source/uwp/Renderer/XamlCardRenderer.vcxproj
@@ -138,6 +138,7 @@
     <ClInclude Include="lib\AdaptiveFact.h" />
     <ClInclude Include="lib\AdaptiveFactSet.h" />
     <ClInclude Include="lib\AdaptiveFactSetConfig.h" />
+    <ClInclude Include="lib\AdaptiveHeight.h" />
     <ClInclude Include="lib\AdaptiveHostConfig.h" />
     <ClInclude Include="lib\AdaptiveImage.h" />
     <ClInclude Include="lib\AdaptiveImageConfig.h" />
@@ -196,6 +197,7 @@
     <ClCompile Include="lib\AdaptiveFact.cpp" />
     <ClCompile Include="lib\AdaptiveFactSet.cpp" />
     <ClCompile Include="lib\AdaptiveFactSetConfig.cpp" />
+    <ClCompile Include="lib\AdaptiveHeight.cpp" />
     <ClCompile Include="lib\AdaptiveHostConfig.cpp" />
     <ClCompile Include="lib\AdaptiveImage.cpp" />
     <ClCompile Include="lib\AdaptiveImageConfig.cpp" />
