--- a/source/uwp/AdaptiveCardsNuget/AdaptiveCards.UWP.Beta.nuspec
+++ b/source/uwp/AdaptiveCardsNuget/AdaptiveCards.UWP.Beta.nuspec
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <package xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
     <metadata>
-        <id>AdaptiveCards.UWP.Beta</id>
+        <id>AdaptiveCards.UWP.Nuget.Beta</id>
         <version>1.0.0</version>
         <authors>Microsoft</authors>
         <owners>microsoft</owners>
