--- a/source/uwp/Visualizer/XamlCardVisualizer.csproj
+++ b/source/uwp/Visualizer/XamlCardVisualizer.csproj
@@ -12,7 +12,7 @@
     <DefaultLanguage>en-US</DefaultLanguage>
     <TargetPlatformIdentifier>UAP</TargetPlatformIdentifier>
     <TargetPlatformVersion>10.0.14393.0</TargetPlatformVersion>
-    <TargetPlatformMinVersion>10.0.10586.0</TargetPlatformMinVersion>
+    <TargetPlatformMinVersion>10.0.14393.0</TargetPlatformMinVersion>
     <MinimumVisualStudioVersion>14</MinimumVisualStudioVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{A5A43C5B-DE2A-4C0C-9213-0A381AF9435A};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
@@ -23,6 +23,7 @@
     <Prefer32Bit>true</Prefer32Bit>
     <OutputPath>bin\$(Platform)\Debug\</OutputPath>
     <PlatformTarget>$(Platform)</PlatformTarget>
+    <RuntimeIdentifiers>win10-arm;win10-arm-aot;win10-x86;win10-x86-aot;win10-x64;win10-x64-aot</RuntimeIdentifiers>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)' == 'Debug'">
     <DebugSymbols>true</DebugSymbols>
@@ -39,22 +40,65 @@
     <UseDotNetNativeToolchain>true</UseDotNetNativeToolchain>
   </PropertyGroup>
   <ItemGroup>
-    <!-- A reference to the entire .Net Framework and Windows SDK are automatically included -->
-    <None Include="project.json" />
-  </ItemGroup>
-  <ItemGroup>
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Converters\ErrorViewModelConverters.cs" />
+    <Compile Include="Converters\NotNullToVisibilityConverter.cs" />
+    <Compile Include="DocumentView.xaml.cs">
+      <DependentUpon>DocumentView.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Helpers\BindableBase.cs" />
+    <Compile Include="Helpers\IListExtensions.cs" />
+    <Compile Include="Helpers\PayloadValidator.cs" />
     <Compile Include="MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TabView.xaml.cs">
+      <DependentUpon>TabView.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="ViewModel\ErrorViewModel.cs" />
+    <Compile Include="ViewModel\MainPageViewModel.cs" />
+    <Compile Include="ViewModel\DocumentViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <AppxManifest Include="Package.appxmanifest">
       <SubType>Designer</SubType>
     </AppxManifest>
+    <Content Include="..\..\..\samples\Scenarios\BingSports.json">
+      <Link>Samples\BingSports.json</Link>
+    </Content>
+    <Content Include="..\..\..\samples\Scenarios\BingStock.json">
+      <Link>Samples\BingStock.json</Link>
+    </Content>
+    <Content Include="..\..\..\samples\Scenarios\CalendarReminder.json">
+      <Link>Samples\CalendarReminder.json</Link>
+    </Content>
+    <Content Include="..\..\..\samples\Scenarios\FlightItinerary.json">
+      <Link>Samples\FlightItinerary.json</Link>
+    </Content>
+    <Content Include="..\..\..\samples\Scenarios\FlightUpdate.json">
+      <Link>Samples\FlightUpdate.json</Link>
+    </Content>
+    <Content Include="..\..\..\samples\Scenarios\ImageGallery.json">
+      <Link>Samples\ImageGallery.json</Link>
+    </Content>
+    <Content Include="..\..\..\samples\Scenarios\Inputs.json">
+      <Link>Samples\Inputs.json</Link>
+    </Content>
+    <Content Include="..\..\..\samples\Scenarios\Restaurant.json">
+      <Link>Samples\Restaurant.json</Link>
+    </Content>
+    <Content Include="..\..\..\samples\Scenarios\TrelloCardCreated.json">
+      <Link>Samples\TrelloCardCreated.json</Link>
+    </Content>
+    <Content Include="..\..\..\schemas\adaptive-card.json">
+      <Link>Schemas\adaptive-card.json</Link>
+    </Content>
+    <Content Include="..\..\..\schemas\renderer-options.json">
+      <Link>Schemas\renderer-options.json</Link>
+    </Content>
     <None Include="XamlCardVisualizer_TemporaryKey.pfx" />
   </ItemGroup>
   <ItemGroup>
@@ -72,9 +116,17 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Page Include="DocumentView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="MainPage.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
+    </Page>
+    <Page Include="TabView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
     </Page>
   </ItemGroup>
   <ItemGroup>
@@ -90,6 +142,20 @@
       <Project>{cf169157-f487-420c-8b9b-ca3abe2bb209}</Project>
       <Name>XamlCardRenderer</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="Microsoft.NETCore.UniversalWindowsPlatform">
+      <Version>5.4.0</Version>
+    </PackageReference>
+    <PackageReference Include="Microsoft.Toolkit.Uwp.UI.Controls">
+      <Version>1.5.1</Version>
+    </PackageReference>
+    <PackageReference Include="Newtonsoft.Json.Schema">
+      <Version>3.0.3</Version>
+    </PackageReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="HostConfigs\" />
   </ItemGroup>
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '14.0' ">
     <VisualStudioVersion>14.0</VisualStudioVersion>
