nuget name changes

--- a/source/uwp/AdaptiveCardsNuget/AdaptiveCards.UWP.nuspec
+++ b/source/uwp/AdaptiveCardsNuget/AdaptiveCards.UWP.nuspec
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <package xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
     <metadata>
-        <id>AdaptiveCards.UWP.Nuget.Beta</id>
+        <id>AdaptiveCards.UWP</id>
         <version>1.0.0</version>
         <authors>Microsoft</authors>
         <owners>microsoft</owners>
@@ -30,7 +30,7 @@
         <file src="..\ARM\$Configuration$\XamlCardRenderer\AdaptiveCards.XamlCardRenderer.pri" target="runtimes\win10-arm\native"/>
         <file src="..\ARM\$Configuration$\XamlCardRenderer\AdaptiveCards.XamlCardRenderer.pdb" target="runtimes\win10-arm\native"/>
 
-        <file src="AdaptiveCards.UWP.Beta.targets" target="build\uap10.0"/>
-        <file src="AdaptiveCards.UWP.Beta.native.targets" target="build\native"/>
+        <file src="AdaptiveCards.UWP.targets" target="build\uap10.0"/>
+        <file src="AdaptiveCards.UWP.native.targets" target="build\native"/>
     </files>
 </package>
