changed normal enum to default

--- a/schemas/host-config.json
+++ b/schemas/host-config.json
@@ -107,7 +107,7 @@
         "Small": {
           "type": "number"
         },
-        "Normal": {
+        "Default": {
           "type": "number"
         },
         "Medium": {
