--- a/source/uwp/Visualizer/XamlCardVisualizer.csproj
+++ b/source/uwp/Visualizer/XamlCardVisualizer.csproj
@@ -55,6 +55,8 @@
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ResourceResolvers\MySymbolResourceResolver.cs" />
+    <Compile Include="Settings.cs" />
     <Compile Include="TabView.xaml.cs">
       <DependentUpon>TabView.xaml</DependentUpon>
     </Compile>
@@ -99,6 +101,8 @@
     <None Include="XamlCardVisualizer_TemporaryKey.pfx" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Assets\Symbols\down.png" />
+    <Content Include="Assets\Symbols\up.png" />
     <Content Include="Properties\Default.rd.xml" />
     <Content Include="Assets\LockScreenLogo.scale-200.png" />
     <Content Include="Assets\SplashScreen.scale-200.png" />
