--- a/source/html/visualizer/package.json
+++ b/source/html/visualizer/package.json
@@ -24,6 +24,7 @@
     "brace": "^0.9.1",
     "http-server": "0.9.0",
     "json-loader": "0.5.4",
+    "lodash": "^4.17.4",
     "markdown-it": "^8.2.2",
     "microsoft-adaptivecards": "^0.5.4",
     "node-sass": "^4.5.2",
